turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: type mismatch;
 found   : Array[Int]
 required: Int
  setCouleurBrosse(colors(rule(etat)(couleur_actuelle)))
                                    ^Turmite:31: error: type mismatch;
 found   : Array[Int]
 required: Int
  couleur_actuelle=rule(etat)(couleur_actuelle)
                             ^Turmite:32: error: type mismatch;
 found   : Array[Array[Int]]
 required: Int
  etat=rule(etat)
           ^